# Sky-Watcher

./: .gitignore  README.md  docker-compose.yaml  init.sql  pyproject.toml
airflow/dags/: 01_cleanup_logs.py  02_daily_stats.py  03_check_spark.py
grafana/dashboards/: skywatcher.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
producer/: Dockerfile  config.py  main.py
streaming/: debug.py  main.py
