[tool.poetry]
name = "sky-watcher"
version = "0.1.0"
description = "Real-time Flight Data Asset Management"
authors = ["11yubin <11yubine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
